--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "author": "me",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mongodb": "^3.5.8",
